--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "core-js": "^3.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
