--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-yandex-maps": "^4.2.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3"
   }
