--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "core-js": "^3.4.3",
+    "formik": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
